--- a/src/app/features/user-management/forgot-password/forgot-password.component.html
+++ b/src/app/features/user-management/forgot-password/forgot-password.component.html
@@ -1,10 +1,13 @@
-<div class="input-template">
+<div [ngClass]="{'input-template':true, 'dark-input-template' :( property.nightmode | async)}">
   <mat-card class="input-card box-elevation-z8">
     <mat-card-header>
       <mat-card-title>Forgot Password</mat-card-title>
     </mat-card-header>
     <br />
-    <form class="input-form" [formGroup]="forgotpasswordform">
+    <form
+      [ngClass]="{'input-form':true,'dark-form': ( property.nightmode | async)}"
+      [formGroup]="forgotpasswordform"
+    >
       <mat-form-field class="input-full-width">
         <mat-label>{{"user.form.name" | translate}}</mat-label>
         <input
@@ -42,7 +45,7 @@
     </form>
     <mat-card-content> </mat-card-content>
     <br /><br /><br /><br />
-    <mat-card-actions class="mat-actions" [ngClass]="{dimmed: show}">
+    <div class="mat-actions" [ngClass]="{dimmed: show}">
       <button
         mat-raised-button
         class="signin-btn"
@@ -51,7 +54,7 @@
       >
         SEND
       </button>
-    </mat-card-actions>
+    </div>
   </mat-card>
 </div>
 <app-spinner
