--- a/src/app/features/user-management/view-orders/view-orders.component.html
+++ b/src/app/features/user-management/view-orders/view-orders.component.html
@@ -78,7 +78,7 @@
   <button
     mat-raised-button
     [routerLink]="['/home']"
-    [ngClass]="{'third-btn': true , 'second-btn' :( property.nightmode | async),'order-button':true}"
+    [ngClass]="{'yellow-btn': true , 'green-btn' :( property.nightmode | async),'order-button':true}"
   >
     {{"user.cart.continue_shopping" | translate}}
   </button>
