--- a/src/app/shared/big-input/big-input-action/big-input-action.component.scss
+++ b/src/app/shared/big-input/big-input-action/big-input-action.component.scss
@@ -1,10 +1,18 @@
 @import '../../../../assets/css/var.scss';
-button {
+.big-btn {
+  background-color: $red;
+  color: $white;
   padding: 0;
   min-width: 80px;
   min-height: 60px;
   margin-right: 25px;
   margin-top: 20px;
+  &.mat-raised-button[disabled]:not([class*='mat-elevation-z']) {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2), 0 0 0 0 rgba(0, 0, 0, 0.14), 0 0 0 0 rgba(0, 0, 0, 0.12) !important;
+    background-color: rgba(0, 0, 0, 0.12) !important;
+    color: rgba(0, 0, 0, 0.26) !important;
+    cursor: default !important;
+  }
   mat-icon {
     font-size: 30px;
     position: relative;
@@ -13,5 +21,5 @@ button {
   }
 }
 .dark-big-btn {
-  background-color: $raspberry;
+  background-color: $raspberry !important;
 }
