--- a/src/assets/css/Globalportal.scss
+++ b/src/assets/css/Globalportal.scss
@@ -83,10 +83,10 @@ body {
 //   button {
 //     margin: 0 2px;
 //   }
-//   .first-btn {
+//   .pink-btn {
 //     background-color: $darkpink;
 //   }
-//   .second-btn {
+//   .red-btn {
 //     background-color: $red;
 //   }
 // }
