--- a/src/assets/css/var.scss
+++ b/src/assets/css/var.scss
@@ -31,6 +31,8 @@ $lightgrey: #607d8b;
 $grey: rgba(47, 47, 47, 0.84);
 $darkgray: #424242;
 $darkergray: #303030;
+$buttongray: #3a3a3a;
+
 $cardgray: #5d5d5d;
 $darkcardgray: #525252;
 $darkest: #222222;
