--- a/src/app/features/admin-management/adminpage/adminpage.component.scss
+++ b/src/app/features/admin-management/adminpage/adminpage.component.scss
@@ -2,9 +2,9 @@
 
 .dark-c-site-left-panel {
   .mat-drawer-inner-container {
-    background-color: $darkgray !important;
+    background-color: $darkergray !important;
   }
 }
 .dark-c-site-middle-content {
-  background: $darkergray;
+  background: $darkest;
 }
