--- a/src/app/features/admin-management/product-components/view-products/view-products.component.html
+++ b/src/app/features/admin-management/product-components/view-products/view-products.component.html
@@ -1,6 +1,6 @@
 <app-jumbotron [Heading]="'admin.main_heading.all_products'"></app-jumbotron>
 <app-spinner [loading]="dataLoading" class="centree-spinner"></app-spinner>
-<div class="outer-wrap">
+<div [ngClass]="{'outer-wrap': true , 'dark-outer-wrap' :( property.nightmode | async)}">
   <mat-card class="display-products-card">
     <mat-card-content>
       <div class="side-icon">
@@ -13,7 +13,7 @@
           <mat-icon>add_circle</mat-icon>
         </button>
       </div>
-      <div class="u-margin-top-15">
+      <div [ngClass]="{'dark-form': ( property.nightmode | async),'u-margin-top-15' :true}">
         <mat-form-field class="search-block" floatLabel="never">
           <input
             autocomplete="off"
@@ -25,7 +25,7 @@
           <mat-icon matSuffix style="font-size: 18px;">search</mat-icon>
         </mat-form-field>
         <mat-divider></mat-divider>
-        <ng-container>
+        <div [ngClass]="{'dark-table-wrapper' :( property.nightmode | async) ,dimmed: dimmed}">
           <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
             <ng-container matColumnDef="image">
               <th mat-header-cell mat-sort-header *matHeaderCellDef>
@@ -77,7 +77,7 @@
               <td mat-cell *matCellDef="let element">
                 <button
                   mat-icon-button
-                  color="primary"
+                  class="view-btn"
                   matTooltip="{{'tooltip.view' | translate}}"
                   (click)="
                     expandedElement =
@@ -89,7 +89,7 @@
                 &nbsp;&nbsp;
                 <button
                   mat-icon-button
-                  color="accent"
+                  class="edit-btn"
                   matTooltip="{{'tooltip.edit' | translate}}"
                   (click)="updateProduct(element)"
                 >
@@ -98,7 +98,7 @@
                 &nbsp;&nbsp;
                 <button
                   mat-icon-button
-                  color="warn"
+                  class="delete-btn"
                   matTooltip="{{'tooltip.delete' | translate}}"
                   (click)="removeProduct(element)"
                 >
@@ -148,7 +148,7 @@
           </table>
 
           <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-        </ng-container>
+        </div>
       </div>
     </mat-card-content>
   </mat-card>
