--- a/src/app/features/cart-management/checkout/billing/billing.component.html
+++ b/src/app/features/cart-management/checkout/billing/billing.component.html
@@ -1,10 +1,13 @@
-<div class="billing-container" [ngStyle]="{'padding-top': (paddingtop | async) +'px'}">
+<div
+  [ngClass]="{'billing-container':true,'dark-billing-container': ( property.nightmode | async)}"
+  [ngStyle]="{'padding-top': (paddingtop | async) +'px'}"
+>
   <mat-card class="edit-profile-card">
     <mat-card-title>
       {{"user.form_heading.enter_billing_details" | translate}}
     </mat-card-title>
     <mat-card-content>
-      <form [formGroup]="billingform">
+      <form [ngClass]="{'dark-form': ( property.nightmode | async)}" [formGroup]="billingform">
         <table class="table-full-width" cellspacing="0">
           <tr>
             <td>
@@ -84,7 +87,11 @@
               <mat-form-field appearance="outline">
                 <mat-label>{{"user.form.country" | translate}}</mat-label>
                 <mat-select required formControlName="selectedcountry">
-                  <mat-option *ngFor="let country of country" [value]="country.name">
+                  <mat-option
+                    [ngClass]="{'dark-option': ( property.nightmode | async)}"
+                    *ngFor="let country of country"
+                    [value]="country.name"
+                  >
                     {{ country.name }}
                   </mat-option>
                 </mat-select>
@@ -97,7 +104,11 @@
               <mat-form-field appearance="outline" class="example-full-width">
                 <mat-label>{{"user.form.state" | translate}}</mat-label>
                 <mat-select required formControlName="selectedstate">
-                  <mat-option *ngFor="let state of state" [value]="state.name">
+                  <mat-option
+                    [ngClass]="{'dark-option': ( property.nightmode | async)}"
+                    *ngFor="let state of state"
+                    [value]="state.name"
+                  >
                     {{ state.name }}
                   </mat-option>
                 </mat-select>
@@ -150,7 +161,7 @@
 >
   <button
     mat-raised-button
-    class="first-btn"
+    class="pink-btn"
     [disabled]="billingform.invalid"
     (click)="goForward()"
   >
