--- a/src/app/features/cart-management/checkout/payment/payment.component.html
+++ b/src/app/features/cart-management/checkout/payment/payment.component.html
@@ -1,5 +1,5 @@
 <div
-  class="payment-container"
+  [ngClass]="{'payment-container':true,'dark-payment-container': ( property.nightmode | async)}"
   [ngStyle]="{'padding-top': (paddingtop | async) +'px'}"
   fxLayout="row"
   fxLayoutAlign="start center"
@@ -176,7 +176,7 @@
         {{"user.form_heading.card_details" | translate}}
       </mat-card-title>
       <mat-card-content>
-        <form [formGroup]="paymentform">
+        <form [ngClass]="{'dark-form': ( property.nightmode | async)}" [formGroup]="paymentform">
           <table class="table-full-width" cellspacing="0">
             <tr>
               <td>
@@ -316,12 +316,11 @@
   </button>
 </div> -->
 <mat-toolbar
-  [ngClass]="{'bottom-action-bar': true,'dark-bottom-action-bar' :( property.nightmode | async)}"
-  class="u-text-right centre-button"
+  [ngClass]="{'bottom-action-bar': true,'dark-bottom-action-bar' :( property.nightmode | async),'u-text-right':true,'centre-button':true}"
 >
   <button
     mat-raised-button
-    class="second-btn"
+    class="red-btn"
     [disabled]="paymentform.invalid"
     (click)="goForward()"
   >
