--- a/src/app/features/cart-management/checkout/payment/payment.component.scss
+++ b/src/app/features/cart-management/checkout/payment/payment.component.scss
@@ -1,3 +1,4 @@
+@import '../../../../../assets/css/var.scss';
 .payment-container {
   width: 100%;
   height: 100%;
@@ -244,13 +245,28 @@
     }
   }
 }
+.dark-payment-container {
+  .grey {
+    fill: $lightergray !important;
+  }
 
-// .generatecard {
-//   float: right;
-//   font-size: 12px;
-//   color: #fff;
-//   padding: 2px 4px;
-//   background-color: #909090;
-//   border-radius: 4px;
-//   cursor: pointer;
-// }
+  .greydark {
+    fill: $darkgray !important;
+  }
+  .card-form {
+    .payment-card {
+      background-color: $darkgray;
+      color: $white;
+      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+        0 3px 14px 2px rgba(0, 0, 0, 0.12) !important;
+      .mat-card-title {
+        color: $white !important;
+        font-weight: normal;
+      }
+      &:hover {
+        box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.5), 0 8px 10px 1px rgba(0, 0, 0, 0.44),
+          0 3px 14px 2px rgba(0, 0, 0, 0.42) !important;
+      }
+    }
+  }
+}
