--- a/src/app/features/user-management/contact/contact.component.html
+++ b/src/app/features/user-management/contact/contact.component.html
@@ -7,7 +7,10 @@
     <mat-card-header>
       <mat-card-title>Contact Us</mat-card-title>
     </mat-card-header>
-    <form class="input-form" [formGroup]="contactform">
+    <form
+      [ngClass]="{'input-form':true,'dark-form': ( property.nightmode | async)}"
+      [formGroup]="contactform"
+    >
       <table class="table-full-width" cellspacing="0">
         <tr>
           <!-- <td>
