--- a/src/app/shared/big-input/big-input/big-input.component.scss
+++ b/src/app/shared/big-input/big-input/big-input.component.scss
@@ -23,6 +23,12 @@
 }
 .dark-big-input {
   background-color: $cardgray;
+  &:hover {
+    box-shadow: 0 5px 5px -3px rgba(156, 28, 182, 0.2), 0 8px 10px 1px rgba(156, 28, 182, 0.24),
+      0 3px 14px 2px rgba(156, 28, 182, 0.22);
+    transform: translateY(-2px) !important;
+    transition-duration: 500ms;
+  }
   input {
     color: $white;
     background-color: $cardgray;
