--- a/src/app/shared/list-products/list-products.component.scss
+++ b/src/app/shared/list-products/list-products.component.scss
@@ -123,14 +123,19 @@
 
 .dark-containerr {
   .product-card {
-    border: 1px solid;
-    box-shadow: 0px 4px 14px 0px rgba(255, 255, 255, 0.1);
+    // border: 1px solid;
+    // box-shadow: 0px 4px 14px 0px rgba(255, 255, 255, 0.1);
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+      0 3px 14px 2px rgba(0, 0, 0, 0.12) !important;
     color: $white;
     background-color: $darkgray;
     &:hover {
-      border: 2px solid;
-      box-shadow: 0 5px 5px -3px rgba(255, 255, 255, 0.3), 0 8px 10px 1px rgba(255, 255, 255, 0.34),
-        0 3px 14px 2px rgba(255, 255, 255, 0.32);
+      background-color: #323232;
+      // border: 2px solid;
+      // box-shadow: 0 5px 5px -3px rgba(255, 255, 255, 0.3), 0 8px 10px 1px rgba(255, 255, 255, 0.34),
+      //   0 3px 14px 2px rgba(255, 255, 255, 0.32);
+      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 1), 0 8px 10px 1px rgba(0, 0, 0, 1),
+        0 3px 14px 2px rgba(0, 0, 0, 1) !important;
     }
     .wishlist-icon {
       .mat-icon-button {
