--- a/src/assets/css/black-component.scss
+++ b/src/assets/css/black-component.scss
@@ -11,10 +11,9 @@
       0 3px 14px 2px rgba(0, 0, 0, 0.12) !important;
     background-color: $cardgray !important;
     &:hover {
-      // border: 1px solid $white;
+      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.5), 0 8px 10px 1px rgba(0, 0, 0, 0.44),
+        0 3px 14px 2px rgba(0, 0, 0, 0.42) !important;
       background-color: $darkgray !important;
-      // box-shadow: 0 5px 5px -3px rgba(255, 255, 255, 0.2), 0 8px 10px 1px rgba(255, 255, 255, 0.14),
-      //   0 3px 14px 2px rgba(255, 255, 255, 0.12) !important;
     }
     .display-text {
       color: $white !important;
@@ -29,7 +28,7 @@
     box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
       0 3px 14px 2px rgba(0, 0, 0, 0.12) !important;
     color: $white;
-    background-color: $cardgray;
+    background-color: $darkgray;
     &.mat-card {
       .mat-card-header {
         background-color: $blueberry;
@@ -38,84 +37,25 @@
         }
       }
       .signin-btn {
-        border: 3px solid #28a745;
-        color: #28a745;
-
-        &:hover {
-          color: white;
-          background-color: #28a745;
-        }
+        background-color: $buttongray;
       }
       .blue-btn {
+        background-color: $buttongray !important;
         &:hover {
-          color: white;
-          background-color: $blueberry;
+          color: $white !important;
+          background-color: $blueberry !important;
         }
       }
       .facebook-btn {
-        color: #3f51b5c4;
-        border: 3px solid #3f51b5c4;
-        &:hover {
-          color: white;
-          background-color: #3f51b5;
-        }
+        background-color: $buttongray;
       }
       .google-btn {
-        color: #f44336d9;
-        border: 3px solid #f44336d9;
-        &:hover {
-          color: white;
-          background-color: #f44336;
-        }
+        background-color: $buttongray;
       }
 
       .input-text {
         .forgot-text {
           color: cadetblue;
-        }
-      }
-    }
-    .input-form {
-      .mat-select-arrow {
-        color: rgba(255, 255, 255, 0.54);
-      }
-      .mat-select-value {
-        color: rgba(255, 255, 255, 0.87) !important;
-      }
-      .mat-form-field-appearance-legacy .mat-form-field-underline {
-        background-color: rgba(255, 255, 255, 0.7);
-      }
-      .mat-form-field.mat-focussed.mat-form-field-ripple {
-        background-color: $darkpurple !important;
-      }
-      .mat-form-field-invalid .mat-input-element {
-        caret-color: $red !important;
-      }
-      .mat-form-field.mat-form-field-invalid .mat-form-field-label {
-        color: $red !important;
-      }
-      .mat-form-field.mat-form-field-invalid .mat-form-field-outline {
-        color: $red !important;
-      }
-      .mat-form-field.mat-form-field-invalid .mat-form-field-ripple,
-      .mat-form-field.mat-form-field-invalid .mat-form-field-ripple.mat-accent {
-        background-color: $red !important;
-      }
-      .mat-form-field-appearance-outline .mat-form-field-outline-thick {
-        color: rgba(255, 255, 255, 0.87);
-      }
-      .mat-form-field-appearance-outline .mat-form-field-outline {
-        color: rgba(255, 255, 255, 0.42);
-      }
-      .mat-form-field-label {
-        color: rgba(255, 255, 255, 0.7) !important;
-      }
-      .mat-input-element::placeholder {
-        color: rgba(255, 255, 255, 0.7) !important;
-      }
-      .input-full-width {
-        .mat-input-element {
-          caret-color: $darkpurple !important;
         }
       }
     }
@@ -160,6 +100,23 @@
         background: $grey !important;
       }
     }
+    th.mat-header-cell,
+    td.mat-cell {
+      border-bottom-color: rgba(255, 255, 255, 0.12) !important;
+    }
+    tr.example-element-row:not(.example-expanded-row) {
+      &:hover {
+        background: $grey !important;
+      }
+      &:active {
+        background: $grey !important;
+      }
+    }
+    .user-element-row {
+      &:hover {
+        background: $grey !important;
+      }
+    }
   }
   .mat-raised-button {
     &.delete-btn {
@@ -177,38 +134,10 @@
       background-color: $green !important;
     }
   }
-
   .input-quantity {
     .mat-form-field-appearance-outline .mat-form-field-outline {
       color: rgba(216, 213, 213, 0.64);
     }
-    // .mat-select-value {
-    //   color: rgba(255, 255, 255, 0.87) !important;
-    // }
-    // .mat-form-field.mat-focussed.mat-form-field-ripple {
-    //   background-color: $darkpurple !important;
-    // }
-    // .mat-form-field-appearance-outline .mat-form-field-outline-thick {
-    //   color: rgba(255, 255, 255, 0.87) !important;
-    // }
-    // .mat-form-field-appearance-outline .mat-form-field-outline {
-    //   color: rgba(255, 255, 255, 0.52) !important;
-    // }
-    // .mat-form-field.mat-focused.mat-form-field-ripple {
-    //   background-color: $yellow !important;
-    // }
-    // .mat-form-field.mat-focused.mat-input-element {
-    //   caret-color: $white !important;
-    // }
-    // .mat-input-element {
-    //   caret-color: $white !important;
-    // }
-    // .mat-form-field-label {
-    //   color: rgba(255, 255, 255, 0.7) !important;
-    // }
-    // .mat-input-element::placeholder {
-    //   color: rgba(255, 255, 255, 0.7) !important;
-    // }
   }
 }
 .dark-total-card {
@@ -244,61 +173,8 @@
       font-weight: normal;
     }
     &:hover {
-      // transform: translateY(-2px);
-    }
-    .edit-form {
-      .password-btn {
-        color: $red !important;
-      }
-      .email-icon {
-        color: gold !important;
-      }
-      .person-icon {
-        color: $black !important;
-      }
-      .mat-select-arrow {
-        color: rgba(255, 255, 255, 0.54);
-      }
-      .mat-select-value {
-        color: rgba(255, 255, 255, 0.87) !important;
-      }
-      .mat-form-field-appearance-legacy .mat-form-field-underline {
-        background-color: rgba(255, 255, 255, 0.7);
-      }
-      .mat-form-field.mat-focussed.mat-form-field-ripple {
-        background-color: $darkpurple !important;
-      }
-      .mat-form-field-invalid .mat-input-element {
-        caret-color: $red !important;
-      }
-      .mat-form-field.mat-form-field-invalid .mat-form-field-label {
-        color: $red !important;
-      }
-      .mat-form-field.mat-form-field-invalid .mat-form-field-outline {
-        color: $red !important;
-      }
-      .mat-form-field.mat-form-field-invalid .mat-form-field-ripple,
-      .mat-form-field.mat-form-field-invalid .mat-form-field-ripple.mat-accent {
-        background-color: $red !important;
-      }
-      .mat-form-field-appearance-outline .mat-form-field-outline-thick {
-        color: rgba(255, 255, 255, 0.87);
-      }
-      .mat-form-field-appearance-outline .mat-form-field-outline {
-        color: rgba(255, 255, 255, 0.42);
-      }
-      .mat-form-field-label {
-        color: rgba(255, 255, 255, 0.7) !important;
-      }
-      .mat-input-element::placeholder {
-        color: rgba(255, 255, 255, 0.7) !important;
-      }
-      .mat-input-element {
-        caret-color: $darkpurple !important;
-      }
-    }
-    .mat-form-field {
-      width: 100%;
+      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.5), 0 8px 10px 1px rgba(0, 0, 0, 0.44),
+        0 3px 14px 2px rgba(0, 0, 0, 0.42) !important;
     }
   }
   .profile-image-card {
@@ -313,12 +189,23 @@
       }
     }
     &:hover {
+      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.5), 0 8px 10px 1px rgba(0, 0, 0, 0.44),
+        0 3px 14px 2px rgba(0, 0, 0, 0.42) !important;
     }
   }
 }
 .dark-order-container {
+  .order-card {
+    background-color: $darkcardgray;
+    .cancel-btn {
+      color: $green !important;
+    }
+    .right-btn {
+      color: $raspberry !important;
+    }
+  }
   .mat-expansion-panel-body {
-    background-color: $lightergray;
+    background-color: $darkcardgray;
   }
   .mat-expansion-panel-header-title {
     color: rgba(255, 251, 251, 0.87);
@@ -328,14 +215,15 @@
     color: rgba(255, 254, 254, 0.54);
   }
   .mat-expansion-panel {
-    background: $darkcardgray;
+    background: $darkgray;
     border-radius: 10px !important;
     &:hover {
-      // transform: translateY(4px);
+      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.5), 0 8px 10px 1px rgba(0, 0, 0, 0.44),
+        0 3px 14px 2px rgba(0, 0, 0, 0.42) !important;
     }
     .mat-expansion-panel-header {
       height: 80px !important;
-      background: $darkcardgray;
+      background: $darkgray;
       // &:hover {
       //   background-color: #673ab71c;
       // }
@@ -345,13 +233,13 @@
     }
     .mat-table {
       .view-btn {
-        color: $yellow;
+        color: $green;
       }
       .cancel-btn {
-        background-color: $green;
-        color: $black;
+        background-color: $raspberry;
+        color: $white;
       }
-      background-color: $lightergray;
+      background-color: $darkcardgray;
       .mat-header-cell {
         color: $lightestgray;
       }
@@ -372,5 +260,121 @@
     .mat-card {
       box-shadow: none;
     }
+  }
+}
+.dark-mat-stepper {
+  background-color: $darkergray;
+  .mat-stepper-horizontal,
+  .mat-stepper-vertical {
+    background-color: #424242;
+  }
+  .mat-stepper-horizontal-line {
+    border-top-color: rgba(255, 255, 255, 0.12);
+  }
+  .mat-step-header .mat-step-icon {
+    background-color: rgba(255, 255, 255, 0.7);
+    color: $white;
+  }
+  .mat-step-header .mat-step-label.mat-step-label-active {
+    color: $white;
+  }
+  .mat-step-header .mat-step-label,
+  .mat-step-header .mat-step-optional {
+    color: rgba(255, 255, 255, 0.54);
+  }
+  .mat-step-header:hover {
+    background-color: rgba(255, 255, 255, 0.04);
+  }
+  .mat-step-header .mat-step-icon-selected,
+  .mat-step-header .mat-step-icon-state-done,
+  .mat-step-header .mat-step-icon-state-edit {
+    background-color: $purple;
+    color: $white;
+  }
+}
+.dark-billing-container {
+  .edit-profile-card {
+    background-color: $darkgray;
+    color: $white;
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+      0 3px 14px 2px rgba(0, 0, 0, 0.12) !important;
+    .mat-card-title {
+      color: $white !important;
+      font-weight: normal;
+    }
+    &:hover {
+      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.5), 0 8px 10px 1px rgba(0, 0, 0, 0.44),
+        0 3px 14px 2px rgba(0, 0, 0, 0.42) !important;
+    }
+  }
+}
+.dark-form {
+  .mat-hint {
+    color: rgba(255, 255, 255, 0.6);
+  }
+  .mat-select-arrow {
+    color: rgba(255, 255, 255, 0.54);
+  }
+  .mat-select-value {
+    color: rgba(255, 255, 255, 0.87) !important;
+  }
+  .mat-form-field-appearance-legacy .mat-form-field-underline {
+    background-color: rgba(255, 255, 255, 0.7);
+  }
+  .mat-form-field.mat-focussed.mat-form-field-ripple {
+    background-color: $darkpurple !important;
+  }
+  .mat-form-field-invalid .mat-input-element {
+    caret-color: $red !important;
+  }
+  .mat-form-field.mat-form-field-invalid .mat-form-field-label {
+    color: $red !important;
+  }
+  .mat-form-field.mat-form-field-invalid .mat-form-field-outline {
+    color: $red !important;
+  }
+  .mat-form-field.mat-form-field-invalid .mat-form-field-ripple,
+  .mat-form-field.mat-form-field-invalid .mat-form-field-ripple.mat-accent {
+    background-color: $red !important;
+  }
+  .mat-form-field-appearance-outline .mat-form-field-outline-thick {
+    color: rgba(255, 255, 255, 0.87);
+  }
+  .mat-form-field-appearance-outline .mat-form-field-outline {
+    color: rgba(255, 255, 255, 0.42);
+  }
+  .mat-form-field-label {
+    color: rgba(255, 255, 255, 0.7) !important;
+  }
+  .mat-input-element::placeholder {
+    color: rgba(255, 255, 255, 0.7) !important;
+  }
+}
+.dark-outer-wrap {
+  .display-products-card {
+    background-color: $darkgray;
+    color: $lightwhite;
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+      0 3px 14px 2px rgba(0, 0, 0, 0.12) !important;
+    &:hover {
+      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.5), 0 8px 10px 1px rgba(0, 0, 0, 0.44),
+        0 3px 14px 2px rgba(0, 0, 0, 0.42) !important;
+    }
+    .delete-btn {
+      color: $raspberry !important;
+    }
+    .view-btn {
+      color: $green !important;
+    }
+    .edit-btn {
+      color: $yellow !important;
+    }
+    .mat-divider {
+      border-top-color: rgba(255, 255, 255, 0.12);
+    }
+  }
+  .mat-paginator-outer-container {
+    color: $white;
+    background: $darkgray;
   }
 }
