--- a/src/app/features/cart-management/checkout/payment/payment.component.html
+++ b/src/app/features/cart-management/checkout/payment/payment.component.html
@@ -318,12 +318,7 @@
 <mat-toolbar
   [ngClass]="{'bottom-action-bar': true,'dark-bottom-action-bar' :( property.nightmode | async),'u-text-right':true,'centre-button':true}"
 >
-  <button
-    mat-raised-button
-    class="red-btn"
-    [disabled]="paymentform.invalid"
-    (click)="goForward()"
-  >
+  <button mat-raised-button class="red-btn" [disabled]="paymentform.invalid" (click)="goForward()">
     {{"user.form.confirm_and_continue" | translate}}
   </button>
 </mat-toolbar>
