--- a/src/app/features/user-management/register/register.component.html
+++ b/src/app/features/user-management/register/register.component.html
@@ -1,11 +1,12 @@
-<div   [ngClass]="{'input-template':true, 'dark-input-template' :( property.nightmode | async)}"
->
+<div [ngClass]="{'input-template':true, 'dark-input-template' :( property.nightmode | async)}">
   <mat-card class="input-card box-elevation-z8">
     <mat-card-header>
       <mat-card-title>Register</mat-card-title>
     </mat-card-header>
-    <form       [ngClass]="{'input-form':true,'dark-form': ( property.nightmode | async)}"
-    [formGroup]="registerform">
+    <form
+      [ngClass]="{'input-form':true,'dark-form': ( property.nightmode | async)}"
+      [formGroup]="registerform"
+    >
       <mat-form-field class="input-full-width">
         <mat-label>{{"user.form.name" | translate}}</mat-label>
         <input autocomplete="off" matInput formControlName="usernameFormControl" />
