--- a/src/app/shared/product-carousel2/product-carousel2.component.html
+++ b/src/app/shared/product-carousel2/product-carousel2.component.html
@@ -26,7 +26,7 @@
                     <div class="thumb-content">
                       <h4>{{item.name}}</h4>
 
-                      <p class="item-price"><b>{{item.price}}</b></p>
+                      <p class="item-price"><b>₹ {{item.price}}</b></p>
                       <button class="btn" mat-raised-button>
                         {{'user.product.add_to_cart' | translate }}
                       </button>
