--- a/src/assets/css/black-component.scss
+++ b/src/assets/css/black-component.scss
@@ -2,7 +2,7 @@
 
 .dark-body {
   color: $white;
-  background-color: $darkergray;
+  background-color: $darkest;
   min-height: 100vh;
 }
 .dark-space-medium {
