--- a/src/assets/css/shared-common.scss
+++ b/src/assets/css/shared-common.scss
@@ -130,3 +130,8 @@
     background-color: $green;
   }
 }
+//--------------------------- Product Display Page------------------------------
+
+.list-product-style {
+  min-height: 830px;
+}
