--- a/src/app/features/user-management/wish-list/wish-list.component.html
+++ b/src/app/features/user-management/wish-list/wish-list.component.html
@@ -27,7 +27,7 @@
       <mat-header-cell *matHeaderCellDef mat-sort-header>
         {{"user.product.price" | translate}}
       </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.price }} </mat-cell>
+      <mat-cell *matCellDef="let element">₹ {{ element.price }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="action">
