--- a/src/app/layout/homepage/page-content/category-tiles/category-tiles.component.scss
+++ b/src/app/layout/homepage/page-content/category-tiles/category-tiles.component.scss
@@ -32,12 +32,15 @@
       // border: 1px solid #d8d8d8;
       background-color: $cardgray !important;
       &:hover {
+        box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.5), 0 8px 10px 1px rgba(0, 0, 0, 0.44),
+          0 3px 14px 2px rgba(0, 0, 0, 0.42) !important;
         background-color: $darkgray !important;
       }
     }
     .display-text {
+      color: $white !important;
       &:hover {
-        color: $white !important;
+        color: wheat !important;
       }
     }
   }
