--- a/src/app/shared/product-carousel2/product-carousel2.component.scss
+++ b/src/app/shared/product-carousel2/product-carousel2.component.scss
@@ -111,10 +111,10 @@
   }
   .carousel .carousel-control {
     height: 44px;
-    width: 40px;
+    width: 44px;
     background: #673ab7;
     margin: auto 0;
-    border-radius: 4px;
+    border-radius: 50%;
     opacity: 1;
   }
   .carousel .carousel-control:hover {
@@ -171,6 +171,7 @@
   }
   .carousel .thumb-wrapper {
     background: $darkgray;
+    color: $white;
     box-shadow: 0 2px 3px rgba(255, 255, 255, 0.2);
     border: 1px solid $white;
     &:hover {
